--- a/fa_salaries.ipynb
+++ b/fa_salaries.ipynb
@@ -62,6 +62,8 @@
     "        minS = t['value']\n",
     "    if t['key'] == 'maxContract':\n",
     "        maxS = t['value']\n",
+    "    if t['key'] == 'season':\n",
+    "        season = t['value']\n",
     "numTeams = len(data['teams'])"
    ]
   },
@@ -76,10 +78,10 @@
     "RN = RAND_NUM - 1 # mod 2 into hash\n",
     "rvec = np.random.randn(RAND_NUM)*RAND_NOISE\n",
     "\n",
-    "TEMP = 0.5\n",
+    "TEMP = 0.35\n",
     "SCALE_UP = 1.1\n",
     "SCALE_DOWN = 0.9\n",
-    "ROUNDS = 30\n",
+    "ROUNDS = 60\n",
     "SCALE_CAP = 1.0 # scaling\n",
     "ADD_CAP = maxS*0.30 # exception salary\n",
     "USE_OWN_INIT = True"
@@ -93,11 +95,16 @@
    "source": [
     "players = {}\n",
     "for p in data['players']:\n",
-    "    if p['tid'] != -1:\n",
+    "\n",
+    "    if p['tid'] >= 0 and p['contract']['exp'] > season+1:\n",
+    "        #print(p['lastName'])\n",
+    "        continue\n",
+    "    elif p['tid'] != -1:\n",
     "        continue\n",
     "        \n",
     "    # i dunno, good enough?\n",
     "    val = p['ratings'][-1]['ovr']*0.5 + p['ratings'][-1]['pot']*0.5\n",
+    "    val = p['value']\n",
     "    \n",
     "    # basically ws/48 prediction from OVR\n",
     "    val_or = (1/209.33) * (max(val,29.14) - 29.14) ** 2\n",
@@ -112,6 +119,7 @@
     "    order = len(p_vals)-1 - np.argsort(p_vals)\n",
     "\n",
     "    # set order by ourselves simply based on order and number of teams!\n",
+    "    # i know it's not actually the right intercepts but whatever, it's close. \n",
     "    for k,v,o in zip(p_keys,p_vals,order):\n",
     "        nv = round(maxS*np.exp(-o/numTeams)+minS)\n",
     "        players[k] = (players[k][0],nv)"
@@ -126,7 +134,7 @@
     "from collections import defaultdict\n",
     "teams = defaultdict(list)\n",
     "for p in data['players']:\n",
-    "    if p['tid'] >= 0:\n",
+    "    if p['tid'] >= 0: #and p['contract']['exp'] > season+1:\n",
     "        teams[p['tid']].append(p['contract']['amount'])\n"
    ]
   },
@@ -201,6 +209,8 @@
    "source": [
     "res = []\n",
     "for p in data['players']:\n",
+    "    if p['pid'] not in players:\n",
+    "        continue\n",
     "    if p['tid'] != -1:\n",
     "        continue\n",
     "    res.append((p['contract']['amount'],players[p['pid']][1]))"
@@ -249,7 +259,7 @@
    "source": [
     "plt.plot(sorted(np.array(list(players.values()))[:,1],reverse=True))\n",
     "xn = np.linspace(0,1000,1000)\n",
-    "plt.plot(xn,maxS*np.exp(-xn/numTeams)+minS)\n",
+    "plt.plot(xn,maxS*np.exp(-xn/(numTeams))+minS)\n",
     "plt.xlim(0,100)\n",
     "plt.ylim(0,45000)"
    ]
@@ -296,7 +306,7 @@
    "outputs": [],
    "source": [
     "for i,e in enumerate(data['players']):\n",
-    "    if e['pid'] in players:\n",
+    "    if e['pid'] in players and e['tid'] == -1:\n",
     "        data['players'][i]['contract']['amount'] = int(round(players[e['pid']][1]))"
    ]
   },
