--- a/fa_salaries.ipynb
+++ b/fa_salaries.ipynb
@@ -79,13 +79,21 @@
     "rvec = np.random.randn(RAND_NUM)*RAND_NOISE\n",
     "\n",
     "TEMP = 0.35\n",
-    "SCALE_UP = 1.1\n",
-    "SCALE_DOWN = 0.9\n",
-    "ROUNDS = 60\n",
+    "LEARNING_RATE = .5\n",
+    "ROUNDS = 20\n",
     "SCALE_CAP = 1.0 # scaling\n",
-    "ADD_CAP = maxS*0.30 # exception salary\n",
-    "USE_OWN_INIT = True"
+    "ADD_CAP = maxS*0.35 # exception salary\n",
+    "USE_OWN_INIT = True\n",
+    "USE_EXPIRINGS = False\n",
+    "EXP_INIT = .4 # try to get init function to work for both"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -95,10 +103,9 @@
    "source": [
     "players = {}\n",
     "for p in data['players']:\n",
-    "\n",
-    "    if p['tid'] >= 0 and p['contract']['exp'] > season+1:\n",
-    "        #print(p['lastName'])\n",
-    "        continue\n",
+    "    if USE_EXPIRINGS and p['tid'] >= 0:\n",
+    "        if p['contract']['exp'] > season+1:\n",
+    "            continue\n",
     "    elif p['tid'] != -1:\n",
     "        continue\n",
     "        \n",
@@ -121,7 +128,7 @@
     "    # set order by ourselves simply based on order and number of teams!\n",
     "    # i know it's not actually the right intercepts but whatever, it's close. \n",
     "    for k,v,o in zip(p_keys,p_vals,order):\n",
-    "        nv = round(maxS*np.exp(-o/numTeams)+minS)\n",
+    "        nv = round(maxS*np.exp(-(1+EXP_INIT*USE_EXPIRINGS)*o/numTeams)+minS)\n",
     "        players[k] = (players[k][0],nv)"
    ]
   },
@@ -134,8 +141,10 @@
     "from collections import defaultdict\n",
     "teams = defaultdict(list)\n",
     "for p in data['players']:\n",
-    "    if p['tid'] >= 0: #and p['contract']['exp'] > season+1:\n",
-    "        teams[p['tid']].append(p['contract']['amount'])\n"
+    "    if p['tid'] >= 0:\n",
+    "        teams[p['tid']].append(p['contract']['amount'])\n",
+    "    if p['pid'] in [163,138]:\n",
+    "        print(p['contract']['amount'])\n"
    ]
   },
   {
@@ -167,7 +176,10 @@
    "source": [
     "for i in range(ROUNDS):\n",
     "    # teams bid on players\n",
-    "\n",
+    "    OFFSET = LEARNING_RATE*(1/(1+i/ROUNDS)**4)\n",
+    "    SCALE_UP = 1.0 + OFFSET\n",
+    "    SCALE_DOWN = 1.0 - OFFSET\n",
+    "    print(i,OFFSET)\n",
     "    bids = defaultdict(int)\n",
     "    team_data = list(team_totals.items())\n",
     "    random.shuffle(team_data)\n",
@@ -257,11 +269,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# test the init thing\n",
     "plt.plot(sorted(np.array(list(players.values()))[:,1],reverse=True))\n",
     "xn = np.linspace(0,1000,1000)\n",
-    "plt.plot(xn,maxS*np.exp(-xn/(numTeams))+minS)\n",
+    "plt.plot(xn,maxS*np.exp(-(1+EXP_INIT*USE_EXPIRINGS)*xn/(numTeams))+minS)\n",
     "plt.xlim(0,100)\n",
-    "plt.ylim(0,45000)"
+    "plt.ylim(0,maxS*1.2)"
    ]
   },
   {
@@ -271,21 +284,10 @@
    "outputs": [],
    "source": [
     "plt.style.use('fivethirtyeight')\n",
-    "plt.figure(figsize=(12,4))\n",
-    "plt.subplot(1,2,1)\n",
     "plt.scatter(np.array(res)[:,0],np.array(res)[:,1])\n",
     "plt.xlabel('old contract')\n",
     "plt.ylabel('new contract')\n",
-    "plt.title('high temp (TEMP = 0.1)')\n",
-    "plt.subplot(1,2,2)\n",
-    "\n",
-    "plt.scatter(np.array(res2)[:,0],np.array(res2)[:,1])\n",
-    "plt.xlabel('old contract')\n",
-    "plt.ylabel('new contract')\n",
-    "plt.title('low temp (TEMP = 5)')\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "plt.suptitle('\"whole league is FA\" re-auction',y=1.05,size=25)"
+    "plt.title('INV_TEMP = {}'.format(TEMP))"
    ]
   },
   {
@@ -294,9 +296,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "change = np.array(res)[:,0]-np.array(res)[:,1]\n",
-    "for i in np.argsort(change):\n",
-    "    print(change[i], data['players'][i]['lastName'],res[i])"
+    "for i,e in enumerate(data['players']):\n",
+    "    if e['pid'] in players:\n",
+    "        if e['pid'] in [163,138]:\n",
+    "            print(int(round(players[e['pid']][1])))"
    ]
   },
   {
