--- a/fa_salaries.ipynb
+++ b/fa_salaries.ipynb
@@ -73,16 +73,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RAND_NUM = 128 # power of 2 plz\n",
-    "RAND_NOISE = 1.5\n",
+    "RAND_NUM = 256 # power of 2 plz\n",
+    "RAND_NOISE = 0.25\n",
     "RN = RAND_NUM - 1 # mod 2 into hash\n",
     "rvec = np.random.randn(RAND_NUM)*RAND_NOISE\n",
     "\n",
-    "TEMP = 0.35\n",
+    "TEMP = 0.6\n",
     "LEARNING_RATE = .5\n",
     "ROUNDS = 20\n",
     "SCALE_CAP = 1.0 # scaling\n",
-    "ADD_CAP = maxS*0.35 # exception salary\n",
+    "ADD_CAP = maxS*0.15 # exception salary\n",
     "USE_OWN_INIT = True\n",
     "USE_EXPIRINGS = False\n",
     "EXP_INIT = .4 # try to get init function to work for both"
@@ -176,10 +176,9 @@
    "source": [
     "for i in range(ROUNDS):\n",
     "    # teams bid on players\n",
-    "    OFFSET = LEARNING_RATE*(1/(1+i/ROUNDS)**4)\n",
+    "    OFFSET = LEARNING_RATE*(1/(1+i/ROUNDS)**3)\n",
     "    SCALE_UP = 1.0 + OFFSET\n",
     "    SCALE_DOWN = 1.0 - OFFSET\n",
-    "    print(i,OFFSET)\n",
     "    bids = defaultdict(int)\n",
     "    team_data = list(team_totals.items())\n",
     "    random.shuffle(team_data)\n",
@@ -189,7 +188,7 @@
     "        #selected = set()\n",
     "        while budget > 0:\n",
     "            # get valid players\n",
-    "            valid_p = [(p[0]+rvec[hash((pid,t))&RN],pid) for pid,p in players.items() if p[1]<=budget and pid not in selected]\n",
+    "            valid_p = [(p[0]+rvec[(6151*pid+6079*t)&RN],pid) for pid,p in players.items() if p[1]<=budget and pid not in selected]\n",
     "\n",
     "            if len(valid_p) > 0:\n",
     "                # sample one\n",
@@ -203,7 +202,8 @@
     "                budget -= players[pid][1]\n",
     "            else:\n",
     "                break\n",
-    "                \n",
+    "    print(i,OFFSET,len([_ for _ in players if bids[_] > 1]))\n",
+    "\n",
     "    # players adjust expectations\n",
     "    for pid,v in players.items():\n",
     "        if pid in bids and bids[pid] > 1:\n",
