--- a/fa_salaries.ipynb
+++ b/fa_salaries.ipynb
@@ -25,7 +25,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('BBGM_League_1_2020_re_sign_players.json','r',encoding='utf-8-sig') as fp:\n",
+    "# for the form exp(x[0]*i)*x[1]\n",
+    "# fit to FBGM team rating coeffcients \n",
+    "# tweaks 0.25*QB1 for Backup QB, LB smoothed out by hand, backup K and P set to min weight of set\n",
+    "pos_V = {'QB': [-1.396, 0.275],\n",
+    " 'RB': [-1.49, 0.019],\n",
+    " 'TE': [-1.527, 0.031],\n",
+    " 'WR': [-0.524, 0.061],\n",
+    " 'OL': [-0.213, 0.181],\n",
+    " 'CB': [-0.568, 0.136],\n",
+    " 'S': [-0.508, 0.101],\n",
+    " 'LB': [-0.389, 0.072],\n",
+    " 'DL': [-0.286, 0.234],\n",
+    " 'K': [-4.386, 0.08],\n",
+    " 'P': [-3.936, 0.051]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('FBGM_League_37_2020_re_sign_players.json','r',encoding='utf-8-sig') as fp:\n",
     "    txt = fp.read()"
    ]
   },
@@ -74,18 +96,20 @@
    "outputs": [],
    "source": [
     "RAND_NUM = 256 # power of 2 plz\n",
-    "RAND_NOISE = 0.25\n",
+    "RAND_NOISE = 0.5\n",
     "RN = RAND_NUM - 1 # mod 2 into hash\n",
     "rvec = np.random.randn(RAND_NUM)*RAND_NOISE\n",
     "\n",
-    "TEMP = 0.6\n",
+    "TEMP = 0.9\n",
     "LEARNING_RATE = .5\n",
-    "ROUNDS = 20\n",
+    "ROUNDS = 60\n",
     "SCALE_CAP = 1.0 # scaling\n",
     "ADD_CAP = maxS*0.15 # exception salary\n",
     "USE_OWN_INIT = True\n",
     "USE_EXPIRINGS = False\n",
-    "EXP_INIT = .4 # try to get init function to work for both"
+    "EXP_INIT = .4 # try to get init function to work for both\n",
+    "MIN_BIDS = 1\n",
+    "IS_FOOTBALL = True"
    ]
   },
   {
@@ -93,7 +117,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def bbgm_value(team):\n",
+    "    teamvt = [v*np.exp(-0.1733*i)*0.336273 for i,v in enumerate(sorted(team,reverse=True))]\n",
+    "    return sum(teamvt)\n",
+    "bbgm_value([72,55,55,52,56,53,62,78])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fbgm_value(team,weights):\n",
+    "    teamvt = [v*np.exp(weights[0]*i)*weights[1] for i,v in enumerate(sorted(team,reverse=True))]\n",
+    "    return sum(teamvt)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -108,18 +148,19 @@
     "            continue\n",
     "    elif p['tid'] != -1:\n",
     "        continue\n",
-    "        \n",
-    "    # i dunno, good enough?\n",
-    "    val = p['ratings'][-1]['ovr']*0.5 + p['ratings'][-1]['pot']*0.5\n",
-    "    val = p['value']\n",
-    "    \n",
-    "    # basically ws/48 prediction from OVR\n",
-    "    val_or = (1/209.33) * (max(val,29.14) - 29.14) ** 2\n",
-    "    \n",
     "    apy = p['contract']['amount']\n",
-    "    players[p['pid']] = (val_or,apy)\n",
     "\n",
-    "if USE_OWN_INIT:\n",
+    "\n",
+    "    val = p['value']\n",
+    "    # could consider cross-pos play by team but won't\n",
+    "    pos = sorted([(v,p) for p,v in p['ratings'][-1]['ovrs'].items() if p not in ['KR','PR']])[-1][1] if IS_FOOTBALL else ''\n",
+    "    if pos == 'QB':\n",
+    "        val /= 1.25\n",
+    "    elif pos in ['P','K']:\n",
+    "        val /= 0.25\n",
+    "    players[p['pid']] = (val,apy,pos)\n",
+    "\n",
+    "if True and not IS_FOOTBALL:\n",
     "    p_keys = list(players.keys())\n",
     "    p_vals = [players[k][1] for k in p_keys]\n",
     "    # 0 is highest, etc. \n",
@@ -129,7 +170,7 @@
     "    # i know it's not actually the right intercepts but whatever, it's close. \n",
     "    for k,v,o in zip(p_keys,p_vals,order):\n",
     "        nv = round(maxS*np.exp(-(1+EXP_INIT*USE_EXPIRINGS)*o/numTeams)+minS)\n",
-    "        players[k] = (players[k][0],nv)"
+    "        players[k] = (players[k][0],nv,players[k][2])"
    ]
   },
   {
@@ -140,11 +181,31 @@
    "source": [
     "from collections import defaultdict\n",
     "teams = defaultdict(list)\n",
+    "team_talent = defaultdict(list) if not IS_FOOTBALL else defaultdict(lambda: defaultdict(list))\n",
     "for p in data['players']:\n",
     "    if p['tid'] >= 0:\n",
     "        teams[p['tid']].append(p['contract']['amount'])\n",
+    "        if IS_FOOTBALL:\n",
+    "            pos = sorted([(v,p) for p,v in p['ratings'][-1]['ovrs'].items() if p not in ['KR','PR']])[-1][1]\n",
+    "            team_talent[p['tid']][pos].append(p['value'])\n",
+    "        else:\n",
+    "            team_talent[p['tid']].append(p['value'])\n",
+    "\n",
     "    if p['pid'] in [163,138]:\n",
     "        print(p['contract']['amount'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if IS_FOOTBALL:\n",
+    "    team_talent_total = defaultdict(lambda: defaultdict(list))\n",
+    "    for t in team_talent:\n",
+    "        for p in pos_V:\n",
+    "            team_talent_total[t][p] = fbgm_value(team_talent.get(t,{}).get(p,[]),pos_V[p])"
    ]
   },
   {
@@ -183,13 +244,25 @@
     "    team_data = list(team_totals.items())\n",
     "    random.shuffle(team_data)\n",
     "    for t,c in team_data: # randomize team order\n",
+    "        if not IS_FOOTBALL:\n",
+    "            val_o = bbgm_value(team_talent[t])\n",
+    "\n",
     "        budget = SCALE_CAP*max(0,cap-c)+ADD_CAP\n",
     "        selected = set([pid for pid,p in players.items() if bids[pid] > 1]) # skip players who we know get signed at their current price\n",
     "        #selected = set()\n",
     "        while budget > 0:\n",
     "            # get valid players\n",
-    "            valid_p = [(p[0]+rvec[(6151*pid+6079*t)&RN],pid) for pid,p in players.items() if p[1]<=budget and pid not in selected]\n",
-    "\n",
+    "            if not IS_FOOTBALL:\n",
+    "                valid_p = [(bbgm_value(team_talent[t] +[p[0]])-val_o,pid) for pid,p in players.items() if p[1]<=budget and pid not in selected]\n",
+    "            else:\n",
+    "                valid_p = []\n",
+    "                for pid,p in players.items():\n",
+    "                    if p[1]> budget or pid in selected:\n",
+    "                        continue\n",
+    "                    val_o = team_talent_total[t].get(p[2],0)\n",
+    "                    tal = team_talent.get(t,{}).get(p[2],[]) \n",
+    "                    val_n = fbgm_value(tal+[p[0]],pos_V[p[2]])\n",
+    "                    valid_p.append((val_n-val_o,pid))\n",
     "            if len(valid_p) > 0:\n",
     "                # sample one\n",
     "                vpa = np.array(valid_p)\n",
@@ -206,10 +279,10 @@
     "\n",
     "    # players adjust expectations\n",
     "    for pid,v in players.items():\n",
-    "        if pid in bids and bids[pid] > 1:\n",
-    "            players[pid]  = (v[0],min(maxS,v[1]*SCALE_UP))\n",
+    "        if pid in bids and bids[pid] > MIN_BIDS:\n",
+    "            players[pid]  = (v[0],min(maxS,v[1]*SCALE_UP),v[2])\n",
     "        elif bids[pid] == 0:\n",
-    "            players[pid] = (v[0],max(minS,v[1]*SCALE_DOWN))\n",
+    "            players[pid] = (v[0],max(minS,v[1]*SCALE_DOWN),v[2])\n",
     "            #print(players[pid],pid)"
    ]
   },
@@ -223,8 +296,8 @@
     "for p in data['players']:\n",
     "    if p['pid'] not in players:\n",
     "        continue\n",
-    "    if p['tid'] != -1:\n",
-    "        continue\n",
+    "    #if p['tid'] != -1:\n",
+    "    #    continue\n",
     "    res.append((p['contract']['amount'],players[p['pid']][1]))"
    ]
   },
@@ -260,7 +333,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res2 = res\n"
+    "res2 = res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vs = np.array(list(players.values()))[:,0]\n",
+    "vss = stable_softmax(vs*2.5)\n",
+    "vss *= numTeams*cap*0.75\n",
+    "vss[np.where(vss > maxS)] = maxS\n",
+    "#_ = plt.hist(vss,80)\n",
+    "plt.plot(np.arange(len(vss)),sorted(vss,reverse=True))\n",
+    "plt.xlim(0,100)"
    ]
   },
   {
@@ -273,7 +361,7 @@
     "plt.plot(sorted(np.array(list(players.values()))[:,1],reverse=True))\n",
     "xn = np.linspace(0,1000,1000)\n",
     "plt.plot(xn,maxS*np.exp(-(1+EXP_INIT*USE_EXPIRINGS)*xn/(numTeams))+minS)\n",
-    "plt.xlim(0,100)\n",
+    "#plt.xlim(0,100)\n",
     "plt.ylim(0,maxS*1.2)"
    ]
   },
@@ -331,6 +419,55 @@
    "source": [
     "data['players'][0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
