--- a/trade_prototype.ipynb
+++ b/trade_prototype.ipynb
@@ -170,7 +170,7 @@
     "    win_p = [1.0/(1+np.exp(-mov*cA -cB)) for mov in pred_movs]\n",
     "\n",
     "    # discount factor for the future, more uncertainty, less sure reward\n",
-    "    value = [wp*(0.7*i) for i,wp in enumerate(win_p)] \n",
+    "    value = [wp*(0.7**(i)) for i,wp in enumerate(win_p)] \n",
     "    return sum(value)\n",
     "get_team_value(team,90000,750)"
    ]
