--- a/trade_models.ipynb
+++ b/trade_models.ipynb
@@ -872,7 +872,7 @@
     "                    ovr = player_ratings[(pid,s)]['ovr']\n",
     "                    for j in range(i):\n",
     "                        ovr+=age_shift.get(age+j,max_shift)\n",
-    "                    pars[i].append(mov[round(np.clip(ovr,0,100))]-r_lvl)\n",
+    "                    pars[i].append(mov[round(np.clip(ovr,0,100))])\n",
     "                    #print(i,pid,age,ovr)\n",
     "        for i in range(1,5):\n",
     "            dpicks = draft_picks[(tid,s+i)]\n",
@@ -886,14 +886,23 @@
     "            #print(contracts[(pid,s)],(player_ratings[(pid,s)]['ovr']),)\n",
     "        for i in range(5):\n",
     "            tmov = team_movs[(tid,s+i)]\n",
-    "            play = [p for p in pars[i] if p > 0]\n",
+    "            play = [p for p in pars[i] if p >= r_lvl]\n",
     "            lp = len(play)\n",
     "            if lp < 10:\n",
-    "                play= play + (10-lp)*[0]\n",
+    "                play= play + (10-lp)*[r_lvl]\n",
     "            play = sorted(play,reverse=True)[:10]\n",
     "            play_s = sum(play)\n",
     "            Xs[i].append([tss[i] + (10-lp)*750,play_s])\n",
     "            ys[i].append(tmov)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(np.array(Xs[0])[:,1])"
    ]
   },
   {
@@ -916,14 +925,14 @@
     "\n",
     "\n",
     "ovr_salaries = defaultdict(list)\n",
-    "sal_ovr = defaultdict(list)\n",
+    "sal_ovrd = defaultdict(list)\n",
     "for p,s in player_ratings:\n",
     "    v = player_ratings[(p,s)]\n",
     "    if (p,s) in contracts:\n",
     "        c = contracts[(p,s)][0]\n",
     "        ovr_salaries[v['ovr']].append(c)\n",
-    "        sal_ovr[c].append(v['ovr'])\n",
-    "sal_ovr = np.array([[s,mov[round(np.mean(c))]-r_lvl] for s,c in sal_ovr.items()])\n",
+    "        sal_ovrd[c].append(v['ovr'])\n",
+    "sal_ovr = np.array([[s,mov[round(np.mean(c))]-r_lvl] for s,c in sal_ovrd.items()])\n",
     "sal_ovr[:,0]/=30000\n",
     "\n",
     "sO = sm.OLS(sal_ovr[:,1],sal_ovr[:,0]).fit()\n",
@@ -931,6 +940,16 @@
     "plt.scatter(sal_ovr[:,0],sO.predict())\n",
     "sA = sO.params[0]\n",
     "sA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAa = np.array([[k,np.mean(v)] for k,v in ovr_salaries.items()])\n",
+    "plt.scatter(SAa[:,0],SAa[:,1])"
    ]
   },
   {
@@ -986,10 +1005,23 @@
     "    mov_from_cap = (cap_space//ot)*(sA*1) + (cap_space%ot)*sA\n",
     "    #pred_mov = v[:,1] + mov_from_cap\n",
     "    RV = np.array([v[:,1], mov_from_cap]).T\n",
+    "    if i==0:\n",
+    "        RV[:,1] *= 0\n",
+    "    if i== 4:\n",
+    "        RV[:,0] *= 0\n",
     "    pred = sm.OLS(ys[i],sm.add_constant(RV)).fit()\n",
     "    print(i,\":\",np.round(pred.params,2),\",\")#,pred.rsquared)\n",
     "    yp[i] = pred.predict()\n",
     "    #print(i,mov_from_cap.mean(),v[:,1].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(yp[0])"
    ]
   },
   {
