--- a/trade_prototype.ipynb
+++ b/trade_prototype.ipynb
@@ -98,11 +98,11 @@
     "# salaries to mov\n",
     "sA,sB = (3.412670359422221,0)\n",
     "player_vs_cap = {\n",
-    "0 : [-14.86,  1.02,   0.00] ,\n",
-    "1 : [-9.88,  0.76,  1.06] ,\n",
-    "2 : [-6.65,  0.51,  0.82] ,\n",
-    "3 : [-3.09,  0.06,  0.53] ,\n",
-    "4 : [-0.06,  0.01,  0.3 ] ,\n",
+    "0 : [-0.2,   1.01,  0.  ] ,\n",
+    "1 : [-1.06,  0.78,  1.07] ,\n",
+    "2 : [-2.19,  0.52,  0.82] ,\n",
+    "3 : [-2.75,  0.06,  0.52] ,\n",
+    "4 : [-3.88,  0.,    0.59] ,\n",
     "\n",
     "}"
    ]
@@ -116,7 +116,7 @@
     "team = { 'p' : [(22,66,22000,2),(22,66,22000,2),(22,66,22000,2),(22,66,22000,2)], #(age,ovr,salary,years_left)\n",
     "         'd' : [(1,0,3),(2,0,3),(1,1,3),(2,1,3),(1,2,3),(2,2,3),(1,3,3),(2,3,3),(1,4,3),(2,4,3)] #(round,years_left,team_MOV)\n",
     "       }\n",
-    "def get_team_value(team,sCap=90000,minS=750):\n",
+    "def get_team_value(team,sCap=90000,maxS=30000,minS=750,FAKE_RESIGN=True):\n",
     "    sCapS = sCap/90000\n",
     "\n",
     "    # turn mov into draft pick and future mov\n",
@@ -134,10 +134,20 @@
     "        for age,ovr,con,yrl in team['p']:\n",
     "            if yrl >= i: # are we on the team still?\n",
     "                tss[i] += con\n",
+    "                ovr2=ovr\n",
     "                for j in range(i):\n",
-    "                    ovr+=age_shift.get(age+j,max_shift)\n",
-    "                pars[i].append(o2m[round(np.clip(ovr,0,100))])\n",
-    "\n",
+    "                    ovr2+=age_shift.get(age+j,max_shift)\n",
+    "                pars[i].append(o2m[round(np.clip(ovr2,0,100))])\n",
+    "            elif FAKE_RESIGN:\n",
+    "                RESIGN_CHANCE = 0.5\n",
+    "                ovr2=ovr\n",
+    "                for j in range(i):\n",
+    "                    ovr2+=age_shift.get(age+j,max_shift)\n",
+    "                mov_p = o2m[round(np.clip(ovr2,0,100))]\n",
+    "                if mov_p > 0: # resign positive MOV contributors\n",
+    "                    est_con = min(1,mov_p/sA) * maxS \n",
+    "                    tss[i] += est_con*RESIGN_CHANCE\n",
+    "                    pars[i].append(RESIGN_CHANCE*mov_p)  \n",
     "        for yr,p in draft_picks:\n",
     "            if yr+1 <= i: # if drafted\n",
     "                dsal = sCapS*draft_salaries[p]\n",
@@ -163,6 +173,8 @@
     "        x = player_vs_cap[i]\n",
     "        p_mov = x[0] + x[1]*play_s + x[2]*mov_from_cap\n",
     "        pred_movs.append(p_mov)\n",
+    "        #if i == 0:\n",
+    "        #    print(play_s,x[2],mov_from_cap)\n",
     "\n",
     "\n",
     "    # turn mov into win probs\n",
@@ -170,7 +182,8 @@
     "    win_p = [1.0/(1+np.exp(-mov*cA -cB)) for mov in pred_movs]\n",
     "\n",
     "    # discount factor for the future, more uncertainty, less sure reward\n",
-    "    value = [wp*(0.7**(i)) for i,wp in enumerate(win_p)] \n",
+    "    value = [wp*(0.7**(i)) for i,wp in enumerate(win_p)]\n",
+    "    #print(np.round(pred_movs,1))\n",
     "    return sum(value)\n",
     "get_team_value(team,90000,750)"
    ]
@@ -196,6 +209,7 @@
     "season = gA['season']\n",
     "sCap = gA['salaryCap']\n",
     "minS = gA['minContract']\n",
+    "maxS = gA['maxContract']\n",
     "\n",
     "team_injuries = defaultdict(list)\n",
     "for p in data['players']:\n",
@@ -254,7 +268,8 @@
    "source": [
     "teams_vals = []\n",
     "for i in range(len(data['teams'])):\n",
-    "    val = get_team_value({'p':team_players[i],'d':team_picks[i]})\n",
+    "    #print(team_names[i])\n",
+    "    val = get_team_value({'p':team_players[i],'d':team_picks[i]},sCap,maxS,minS)\n",
     "    teams_vals.append((val,team_names[i]))"
    ]
   },
@@ -267,13 +282,6 @@
     "for v,t in sorted(teams_vals):\n",
     "    print(v,t)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
