--- a/trade_prototype.ipynb
+++ b/trade_prototype.ipynb
@@ -234,15 +234,16 @@
     "    tid = t['tid']\n",
     "    team_names[t['tid']] = t['abbrev']\n",
     "    for ts in t['stats']:\n",
+    "        if ts['playoffs']:\n",
+    "            continue\n",
     "        current_mov = 0\n",
     "        gp = ts['gp']\n",
-    "        gl = 82-gp\n",
-    "        if season != ts['season'] and not ts['playoffs']:\n",
+    "        gl = 82-gp+1e-9\n",
+    "        if season == ts['season'] and not ts['playoffs']:\n",
     "            mov = (ts['pts'] - ts['oppPts']) / ts['gp'];\n",
     "            current_mov = mov\n",
     "        estimated_mov = sum(sorted([o2m[_[1]]*(max(gl-i,0)/gl) for _,i in zip(team_players[tid],team_injuries[tid])])[-10:])\n",
-    "        team_movs[tid] = (gp/82)*current_mov + (gl/82)*estimated_mov\n",
-    "    "
+    "        team_movs[tid] = (gp/82)*current_mov + (gl/82)*estimated_mov    "
    ]
   },
   {
@@ -279,9 +280,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for v,t in sorted(teams_vals):\n",
-    "    print(v,t)"
+    "for v,t in sorted(teams_vals)[::-1]:\n",
+    "    print(round(100*v,2),t)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
